# aura-vault-protocol

./: .dockerignore  .env.staging.example  .gitignore  ACCEPTANCE_CRITERIA.md  AUDIT.md  CHANGELOG.md  CI_CD_VERIFICATION_REPORT.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FEE_SYSTEM.md  FUZZING_IMPLEMENTATION_SUMMARY.md  FUZZING_STRATEGY.md  FUZZ_FINDINGS.md  FUZZ_PROPERTIES_GUIDE.md  GOVERNANCE.md  GOVERNANCE_IMPLEMENTATION.md  GOVERNANCE_SUMMARY.md  GOVERNANCE_USAGE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_RESPONSE.md  INDEX.md  INTEGRATION_GUIDE.md  INTEGRATION_JAVASCRIPT.md  INTEGRATION_PYTHON.md  INTEGRATION_RUST.md  OPERATIONS_MONITORING.md  OPERATIONS_RUNBOOK.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SUPPORT_FAQ.md  TECHNICAL_INTEGRATION_INDEX.md  (+12 more)
aura-vault/: Cargo.toml  Dockerfile  proptest.toml
aura-vault/src/: errors.rs  fee.rs  fuzz.rs  governance.rs  interface.rs  lib.rs  security_test.rs  storage.rs  test.rs
aura-vault/test_snapshots/test/: test_balance_of_distinct_addresses_no_collision.1.json  test_deposit_overflow_returns_math_overflow.1.json  test_deposit_withdraw_round_trip_rounding.1.json  test_double_init_returns_already_initialized.1.json  test_fresh_vault_balance_of_unknown_address_is_zero.1.json  test_harvest_before_init_returns_not_initialized.1.json  test_harvest_non_dilution.1.json  test_harvest_on_empty_vault_returns_zero_shares.1.json  (+10 more)
backend/: .env.example  (+3 more)
(+276 files in other folders)
