[package]
name = "aura-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22", default-features = true }

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
proptest = "1"

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
